imp: added components, translation...

--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "bootstrap": "^4.6.0",
+    "i18next": "^19.8.9",
+    "i18next-browser-languagedetector": "^6.0.1",
+    "i18next-http-backend": "^1.1.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.5.0",
     "react-dom": "^17.0.1",
+    "react-i18next": "^11.8.7",
     "react-scripts": "4.0.3",
+    "twitch": "^4.4.12",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
